--- a/style.css
+++ b/style.css
@@ -24,11 +24,24 @@ body {
     padding: 20px;
     border-radius: 10px;
     background-color: rgba(255,255,255,0.4);
-    box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+    box-shadow: 0 10px 10px rgba(0,0,0,0.2);   
+}
 
+.quote-text {
+    font-size: 2.75rem; // more responsive than px
+}
 
+.long-quote {
+    font-size: 2rem; //will dynamically turn this on or off when needed
+}
 
-    
+.fa-quote-left {
+    font-size: 4 rem;
+}
 
-    
+.quote-author {
+    margin-top: 15px;
+    font-size: 2rem;
+    font-weight: 400;
+    font-style: italic;
 }
