added a media query to adjust layout for screens no larger than a standard tablet

--- a/style.css
+++ b/style.css
@@ -45,3 +45,15 @@ body {
     font-weight: 400;
     font-style: italic;
 }
+
+/* Media Query: Tablet or Smaller*/
+
+@media screen and (max-width:1000px){
+    .quote-container {
+        margin: auto 10px;
+        /* equivalent to MT/MB: auto and ML/MR:10px */
+    }
+    .quote-text{
+        font-size: 2.5rem;
+    }
+}
