--- a/style.css
+++ b/style.css
@@ -46,6 +46,19 @@ body {
     font-style: italic;
 }
 
+.button-container {
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-between;
+    
+
+}
+
+
+
+
+
+
 /* Media Query: Tablet or Smaller*/
 
 @media screen and (max-width:1000px){
