--- a/style.css
+++ b/style.css
@@ -28,15 +28,15 @@ body {
 }
 
 .quote-text {
-    font-size: 2.75rem; // more responsive than px
+     font-size: 2.75rem; /* more responsive than px */
 }
 
 .long-quote {
-    font-size: 2rem; //will dynamically turn this on or off when needed
+    font-size: 2rem; /* will dynamically turn this on or off when needed */
 }
 
 .fa-quote-left {
-    font-size: 4 rem;
+    font-size: 4rem;
 }
 
 .quote-author {
@@ -50,10 +50,32 @@ body {
     margin-top: 15px;
     display: flex;
     justify-content: space-between;
-    
+
 
 }
 
+button {
+    cursor: pointer;
+    font-size: 1.2rem;
+    height: 2.5rem;
+    border: none;
+    border-radius: 10px;
+    color: #fff;
+    background: #333;
+    outline:none;
+    padding: 0.5rem 1.8rem;
+    box-shadow: 0 0.3rem rgba(121,121,121,0.65);
+
+}
+
+button:hover {
+    filter: brightness(110%);
+}
+
+button:active {
+    transform: translate(0,0.3rem);
+    box-shadow: 0 0.1rem rgba (255,255,255,.65);
+}
 
 
 
