--- a/style.css
+++ b/style.css
@@ -74,10 +74,16 @@ button:hover {
 
 button:active {
     transform: translate(0,0.3rem);
-    box-shadow: 0 0.1rem rgba (255,255,255,.65);
+    box-shadow: 0 0.1rem rgba(255,255,255,.65);
 }
 
+.twitter-button:hover{
+    color: #38a1f3;
+}
 
+.fa-twitter {
+    font-size: 1.5rem;
+}
 
 
 
